# zero2prod

./: .gitignore  Cargo.toml  README.md
migrations/: 20211005055206_create_subscriptions_table.sql
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
