[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[features]

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.3"
reqwest = "0.11.4"
tokio = "1.12.0"
serde = {version="1", features = ["derive"]}
config = "0.11.0"
uuid = {version = "0.8.1", features= ["v4"]}
chrono = "0.4.15"

[dependencies.sqlx]
version="0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
